# Officer_Petrol

./: .gitignore  app.py  pyproject.toml  requirements.txt
ofcptlenv/conda-meta/: ca-certificates-2026.5.14-hca03da5_0.json  created_at  history  libcxx-22.1.2-hf894667_0.json  libexpat-2.8.1-h50f4ffc_0.json  libffi-3.4.8-hcfc0b96_2.json  libzlib-1.3.1-hb4cf58c_1.json  ncurses-6.5-hee39554_0.json  openssl-3.5.6-ha0b305a_0.json  packaging-26.0-py311hca03da5_0.json  pip-26.1.1-pyhc872135_0.json  python-3.11.15-h4f1bc5c_0.json  readline-8.3-h0b18652_0.json  setuptools-82.0.1-py311hca03da5_0.json  sqlite-3.51.2-h67002bf_0.json  tk-8.6.15-hcd8a7d5_0.json  tzdata-2026b-he532380_0.json  wheel-0.46.3-py311hca03da5_0.json  xz-5.8.2-h8bbcb1d_0.json  zlib-1.3.1-hb4cf58c_1.json
ofcptlenv/etc/: aau_token
ofcptlenv/lib/: libncursesw.6.dylib  libtcl8.6.dylib  libtinfow.6.dylib  tclConfig.sh  tkConfig.sh
ofcptlenv/lib/itcl4.3.0/: itclConfig.sh
ofcptlenv/lib/pkgconfig/: expat.pc  formw.pc  history.pc  libcrypto.pc  libffi.pc  liblzma.pc  libssl.pc  menuw.pc  ncurses++w.pc  ncursesw.pc  openssl.pc  panelw.pc  python-3.11-embed.pc  python-3.11.pc  readline.pc  sqlite3.pc  tcl.pc  tinfow.pc  tk.pc  zlib.pc
ofcptlenv/lib/python3.11/: _sysconfigdata__darwin_darwin.py  _sysconfigdata__darwin_darwin.py.orig  _sysconfigdata_arm64_apple_darwin20_0_0.py
ofcptlenv/lib/python3.11/config-3.11-darwin/: Makefile  python-config.py
ofcptlenv/lib/tdbc1.1.9/: tdbcConfig.sh
ofcptlenv/share/terminfo/61/: abm85  abm85e  abm85h  abm85h-old  adm36  (+3 more)
src/: __init__.py  components.py  data_loader.py
(+142 files in other folders)
